# cool_tetris

./: .gitignore  CMakeLists.txt  LICENSE  game_logic.h  game_widget.cpp  game_widget.h  main.cpp  mainwindow.cpp  mainwindow.h  tetromino.cpp  tetromino.h
TetrisClient/: CMakeLists.txt  resources.qrc
TetrisClient/src/: main.cpp
TetrisClient/src/core/: game_logic.cpp  game_logic.h  tetromino.cpp  tetromino.h
TetrisClient/src/network/: network_manager.cpp  network_manager.h
TetrisClient/src/settings/: setting_manager.cpp  setting_manager.h
TetrisClient/src/ui/: mainwindow.cpp  mainwindow.h
TetrisClient/src/ui/ingame/: fild_widget.cpp  fild_widget.h  game_over_widget.cpp  game_widget.cpp  game_widget.h  next_pieces_widget.cpp  next_pieces_widget.h  pause_widget.cpp  pause_widget.h  poket_piece_widget.h  score_widget.cpp  score_widget.h
TetrisClient/src/ui/menus/: auth_form.cpp  auth_form.h  auth_form.ui  menu_widget.cpp  menu_widget.h  setting_widget.cpp  setting_widget.h  statistic_widget.cpp  statistic_widget.h
TetrisServer/: CMakeLists.txt
TetrisServer/src/: main.cpp  myserver.cpp  myserver.h
src/core/: game_logic.cpp  game_logic.h
src/ui/: mainwindow.cpp
src/ui/ingame/: fild_widget.cpp  fild_widget.h  game_widget.cpp  game_widget.h  next_pieces_widget.h  poket_piece_widget.cpp  poket_piece_widget.h
src/ui/menus/: menu_widget.cpp  menu_widget.h  setting_widget.cpp  setting_widget.h
