cmake_minimum_required(VERSION 3.19)
project(cool_tetris LANGUAGES CXX)

find_package(Qt6 6.5 REQUIRED COMPONENTS Core Widgets)

qt_standard_project_setup()

qt_add_executable(cool_tetris
    WIN32 MACOSX_BUNDLE
    main.cpp
    tetromino.h tetromino.cpp
    game_logic.h game_logic.cpp
    game_widget.h game_widget.cpp
    mainwindow.h mainwindow.cpp





)

target_link_libraries(cool_tetris
    PRIVATE
        Qt::Core
        Qt::Widgets
)

include(GNUInstallDirs)

install(TARGETS cool_tetris
    BUNDLE  DESTINATION .
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
)

qt_generate_deploy_app_script(
    TARGET cool_tetris
    OUTPUT_SCRIPT deploy_script
    NO_UNSUPPORTED_PLATFORM_ERROR
)
install(SCRIPT ${deploy_script})
